修改配置文件

--- a/conf/config_local.yaml
+++ b/conf/config_local.yaml
@@ -2,14 +2,14 @@
 runport: ":8998"
 dominname: "http://xxx.com"
 envmode: "dev"
-projectpath: "/data/apps/reading-friends-parent"
+projectpath: "/usr/local/workspace/src/readbook"
 wxappid: "xxx"
-wxsecret: "xxx"
-wxpaymchid: "xxx"
+wxsecret: "xx"
+wxpaymchid: "xx"
 wxpaykey: "xxxx"
 wxpushtemplate:
-  - "0,Q4DW2x0UY_xzJF48vpMHYj1fzKD_g,http://xxx/task.html"
-  - "1,w4DW2x0UY_xzJF4fvpMHYj1fzKD_g,http://xxx/task.html"
+  - "0,Q4DW2x0UY_xzJF4LOvpMHYj1fzKD_g,http://xxx/task.html"
+  - "1,w4DW2x0UY_xzJF4LOdMHYj1fzKD_g,http://xxx/task.html"
 wxtoken: "xxx"
 
 logproject: "APILOC"
